PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Resolve possibility of first graph missing when exporting results as PDF
phodevi: WSLFS (Windows Subsystem for Linux) file-system detection
phodevi: Add monitor detection based on parsing EDID supplied by `xrandr --prop` (works well for newer NVIDIA setups)

Phoronix Test Suite 7.4.0 Milestone 1
31 July 2017

pts-core: Don't show PTS version when there is no sub-title, just leave it empty
pts-core: Add phoronix-test-suite unload-module sub-command
pts-core: Add phoronix-test-suite auto-load-module sub-command
pts-core: Drop juju scripts as appears unmaintained, happy to re-add if maintained
pts-core: Allow showing existing results from a result file in-progress on test runs
pts_Graph: Color tweaking
phodevi: Clear up extra potential fluff in the GPU model string
perf_tips: New module to indicate various performance tips to users

Phoronix Test Suite 7.2.1-Trysil
30 June 2017

pts-core: Don't pass arguments in quotes to pre/interim/post test scripts
pts-core: Minor optimization to is_test_profile() and more easily allow explicit paths to be used, overriding what's in OB cache
pts-core: Minor optimization to is_suite() and more easily allow explicit paths to be used, overriding what's in OB cache
pts-core: Fix warning in pts_test_result_parser
phodevi: AVX-512 reporting

Phoronix Test Suite 7.2.0-Trysil
8 June 2017

pts-core: Add TurnCharsToSpace support to result parser
pts_Graph: Fix multi-way comparison detection

Phoronix Test Suite 7.2.0 Milestone 4
3 June 2017

pts-core: If a OB upload fails with system logs, try again without system logs
pts-core: Add basic dump-tests-to-git sub-command
pts-core: Add basic dump-suites-to-git sub-command
pts-core: Result parser fixes/improvements
pts-core: Additional safety checks around loading test result arguments from a result file
pts-core: Add "vulkan-development" external dependency
pts_Graph: Few tweaks/clean-ups